Container/list view: Fix for floating elements
Fix for cases where floating elements are cut off, such as quickview
and tooltips attached to the container. This makes overflow visible.

--- a/ui/css/cloudstack3.css
+++ b/ui/css/cloudstack3.css
@@ -62,9 +62,8 @@ body.install-wizard {
 
 #container {
   width: 1024px;
-  height: 768px;
+  height: 783px;
   margin: auto;
-  overflow: hidden;
   border: 1px solid #E2E2E2;
   border-top: none;
   position: relative;
@@ -1194,7 +1193,7 @@ div.notification.corner-alert:hover div.message span {
 div.panel div.list-view {
   overflow: auto;
   overflow-x: hidden;
-  height: 652px;
+  height: 668px;
   margin-top: 30px;
   border-bottom: 1px solid #E7E7E7;
 }
